# Coding_Projects

./: .gitignore  CMakeLists.txt  Project  Project.cpp  Project.slnx  Project.vcxproj  README.md
data/: Clients.txt  Users.txt
include/: Global.h  InterfaceCommunication.h  clsAddNewClientScreen.h  clsBankClient.h  clsClientListScreen.h  clsDate.h  clsDeleteClientScreen.h  clsFindClientScreen.h  clsInputValidate.h  clsLogScreen.h  clsLoginRegisterScreen.h  clsLoginScreen.h  clsMainScreen.h  clsPeriod.h  clsPerson.h  clsScreen.h  clsString.h  clsUpdateClientScreen.h  clsUtil.h
include/Clients screens/: clsAddNewClientScreen.h  clsBankClient.h  clsClientListScreen.h  clsDeleteClientScreen.h  clsFindClientScreen.h  clsUpdateClientScreen.h
include/Core/: clsBankClient.h  clsCurrency.h  clsPerson.h  clsUser.h
include/Lib/: clsDate.h  clsInputValidate.h  clsPeriod.h  clsString.h  clsUtil.h
include/Login_screens/: clsLoginRegisterScreen.h  clsLoginScreen.h
include/Manage_Users_Screen/: clsAddNewUserScreen.h  clsDeleteUserScreen.h  clsFindUserScreen.h  clsListUsersScreen.h  clsManageUsersScreen.h  clsUpdateUserScreen.h  clsUser.h
include/P04 Currency Exchange/: clsCurrenciesListScreen.h  clsCurrency.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeMainScreen.h  clsFindCurrencyScreen.h  clsUpdateCurrencyRateScreen.h  main1 Currency.h
include/Screens/: clsMainScreen.h  clsScreen.h
include/Screens/Client/: clsAddNewClientScreen.h  clsClientListScreen.h  clsDeleteClientScreen.h  clsFindClientScreen.h  clsUpdateClientScreen.h
include/Screens/Currenceis/: clsCurrenciesListScreen.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeMainScreen.h  clsFindCurrencyScreen.h  clsUpdateCurrencyRateScreen.h
include/Screens/Login/: clsLoginRegisterScreen.h  clsLoginScreen.h
include/Screens/Transactions/: clsDepositScreen.h  clsTotalBalancesScreen.h  clsTransactionsScreen.h  clsTransferLogScreen.h  clsTransferScreen.h  clsWithdrawScreen.h
include/Screens/User/: clsAddNewUserScreen.h  clsDeleteUserScreen.h  clsFindUserScreen.h  clsListUsersScreen.h  clsManageUsersScreen.h  clsUpdateUserScreen.h
include/Transactions Screen/: clsDepositScreen.h  clsTotalBalancesScreen.h  clsTransactionsScreen.h  clsTransferLogScreen.h  clsTransferScreen.h  clsWithdrawScreen.h
src/: imad.cpp  imad.h  main.cpp
